2008-02-09  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/PangoLayout.t
	* xs/PangoLayout.xs: Wrap pango_layout_set_height and
	pango_layout_get_height.

	* xs/PangoTypes.xs (Gtk2::Pango::extents_to_pixel): Change the
	names of the arguments from "ink_rect, logical_rect" to
	"inclusive, nearest" as suggested by upstream.

2008-01-19  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/PangoLayout.t
	* xs/PangoLayout.xs: Wrap pango_layout_iter_get_layout and make
	use of pango_layout_iter_copy if available.

	* t/PangoRenderer.t
	* xs/PangoRenderer.xs: Wrap pango_renderer_get_layout and
	pango_renderer_get_layout_line.

	* t/GtkTreeView.t: Hopefully fix some test failures involving a
	wrong number of tests run by having every callback with tests run
	only once.

2008-01-14  muppetman

	* xs/GdkPixbuf.xs
	* t/GdkPixbuf.t:  Add a NULL terminator to keep GdkPixbuf from
	crashing on incomplete xpm data.  Add unit tests.  Patch from
	Kevin Ryde.

2008-01-12  muppetman

	* xs/GdkRegion.xs
	* t/GdkRegion.t:  Return copy of stack rectangle instead of just
	a pointer, to avoid garbage values from get_clipbox().  Patch from
	Kevin Ryde.

	* xs/GtkStatusIcon.xs
	* t/GtkStatusIcon.t:  Fix similar stack copy bug.

2008-01-11  muppetman

	* xs/GtkCellLayout.xs:  Fix usage message bug reported by Kevin Ryde.

2008-01-09  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* Makefile.PL
	* NEWS
	* README: Unstable release 1.172.

2008-01-09  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GdkVisual.t
	* t/GdkX11.t
	* t/GtkPaned.t: Fix some reported test failures by either being
	less conservative in what we expect or by simply testing less of
	gtk+ itself.

2008-01-09  muppetman

	* MANIFEST
	* t/GtkBuildableIface.t
	* xs/GtkBuildable.xs:  Allow perl code to implement GtkBuildableIface.

	Lots of documentation.  Hide docs for the normal GtkBuildable
	methods, as they are really only useful for GtkBuilder to call.
	Add a new unit test for the iface stuff.
