@@ -20,13 +20,9 @@ isa_ok(my $visual = Gtk2::Gdk::Visual -> get_system(), "Gtk2::Gdk::Visual");
 isa_ok(Gtk2::Gdk::Visual -> get_best(), "Gtk2::Gdk::Visual");
 isa_ok(Gtk2::Gdk::Visual -> get_best_with_type($types[0]), "Gtk2::Gdk::Visual");
 SKIP: {
-  my $best = Gtk2::Gdk::Visual -> get_best_with_both($depths[0], $types[1]);
-  if (defined $best) {
-    isa_ok($best, "Gtk2::Gdk::Visual");
-  }
-  else {
-    ok(TRUE);
-  }
+  my $best = Gtk2::Gdk::Visual -> get_best_with_both($depths[0], $types[0]);
+  skip 'best test', 1 unless defined $best;
+  isa_ok($best, "Gtk2::Gdk::Visual");
 }
 
 SKIP: {
