@@ -1,3 +1,10 @@
+2008-02-11  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
+	* t/GdkProperty.t
+	* t/GdkVisual.t
+	* t/GtkClipboard.t
+	* t/GtkTreeView.t: Fix test failures.
+
 2008-02-09  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	* t/PangoLayout.t
